# Shipyard

./: .dockerignore  .env.example  .gitignore  AI-DEV-LOG.md  CLAUDE.md  CODEAGENT.md  DEMO-SCRIPT.md  Dockerfile  PRESEARCH.md  README.md  SHIP-REBUILD-LOG.md  app.json  fly.toml  pyproject.toml  requirements.txt  run_steps.md  test-steps.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
agent/: __init__.py  approval.py  context.py  events.py  git.py  github.py  graph.py  llm.py  models.py  node_events.py  parallel.py  router.py  schemas.py  state.py  steps.py  token_tracker.py  tracing.py
scripts/: __init__.py  deploy_railway.py  railway_template.env  rebuild_orchestrator.py  register_ship_project.py  ship_rebuild.py
server/: main.py  websocket.py
spike/: validate_anchor_spike.py
store/: models.py  protocol.py  sqlite.py
tests/: conftest.py  test_analyzer.py  test_analyzer_imports.py  test_approval.py  test_approval_rest.py  test_approval_store.py  test_ast_ops.py  test_branch_manager.py  test_cancel.py  test_checkpoint.py  test_ci_runner.py  test_connection_manager.py  test_context.py  test_context_injection.py  test_context_packs.py  test_contracts.py  test_dag.py  test_dag_contracts.py  test_dag_integration.py  test_dag_resume.py  test_editor_node.py  test_event_bus.py  test_event_streaming_integration.py  test_execution_engine.py  test_failure_classifier.py  test_file_ops.py  test_git.py  test_git_ops_e2e.py  test_git_ops_node.py  test_github.py  test_graph.py  test_integration.py  test_llm.py  test_lsp_client.py  test_lsp_integration.py  test_lsp_manager.py  test_models_registry.py  test_multiagent.py  test_node_events.py  test_observability.py  (+25 more)
traces/: trace-1-normal-edit.json  trace-1-normal-run.json  trace-2-branching-path.json  (+1 more)
web/: index.html  (+4 more)
(+316 files in other folders)
