[project]
name = "shipyard"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph==1.1.3",
    "langchain-anthropic==1.4.0",
    "langchain-core==1.2.21",
    "anthropic>=0.42.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "server"]
