[project]
name = "shipyard"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph==1.1.3",
    "langchain-openai>=0.3.0",
    "langchain-core==1.2.21",
    "openai>=1.60.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "server", "store"]
